# ocelot

./: .gitignore  404.html  CNAME  LICENSE  README.md  hi.pickle  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: build-docs.yml
.github/workflows/: build-docs.yml  python-publish.yml
api/calculate/: index.html
api/simulate/: index.html
changelog/: index.html
citation/: index.html
developing/: index.html
docs/: changelog.md  citation.md  developing.md  features.md  index.md  installation.md  issue.md
docs/api/: calculate.md  simulate.md
docs/tutorials/: binary_star_models.ipynb  simulate_a_cluster.ipynb
features/: index.html
installation/: index.html
issue/: index.html
ocelot/: __init__.py
ocelot/calculate/: __init__.py  calculate.py  constants.py  dust.py  profile.py  random.py
ocelot/cluster/: __init__.py  epsilon.py  hypothesis.py  metrics.py  nearest_neighbor.py  partition.py  preprocess.py  resample.py  synthetic.py  synthetic_.py
ocelot/crossmatch/: __init__.py  _catalogue.py  catalogue.py  crossmatch.py
ocelot/isochrone/: __init__.py  interpolate.py  io.py
ocelot/plot/: __init__.py  axis.py  figure.py  gaia_explorer.py  plot_figure.py  plot_on_axis.py  process.py  utilities.py
ocelot/plot/axis/: __init__.py  ax_isochrone.py  cluster.py  nn_statistics.py
ocelot/verify/: __init__.py  find.py  significance.py  stats.py
scripts/: README.md  download_parsec_isochrones.py  download_test_data.py  keypress_demo.py  spline_fit_to_random_data.py  testing_verification.py
search/: search_index.json
src/ocelot/: __init__.py
src/ocelot/_data/binaries/: Moe_DiStefano17_interpolated_random_q_relation.pickle
src/ocelot/calculate/: __init__.py  calculate.py  constants.py  distance.py  generic.py  motion.py  position.py  profile.py  random.py
src/ocelot/cluster/: __init__.py  epsilon.py  nearest_neighbor.py  preprocess.py  resample.py  synthetic.py
src/ocelot/crossmatch/: __init__.py  _catalogue.py
src/ocelot/isochrone/: __init__.py  io.py
src/ocelot/model/: __init__.py
src/ocelot/model/binaries/: __init__.py  _base.py  moe_distefano_17.py
src/ocelot/model/differential_reddening/: __init__.py  _base.py  differential_reddening.py
src/ocelot/model/distribution/: __init__.py  _base.py  _common.py  king62.py  king64.py  plummer.py
src/ocelot/model/observation/: __init__.py  _base.py  common.py  subsample_selection.py
src/ocelot/model/observation/gaia/: __init__.py  gaia_dr3.py
src/ocelot/plot/: __init__.py  plot_figure.py  utilities.py
src/ocelot/plot/axis/: __init__.py  cluster.py  nn_statistics.py
src/ocelot/simulate/: __init__.py  astrometry.py  binaries.py  cluster.py  errors.py  observation.py  photometry.py  photutils.py  selection.py  uncertainties.py
src/ocelot/util/: check.py  coordinates.py  magnitudes.py  random.py  stats.py
src/ocelot/verify/: __init__.py  find.py  significance.py
tests/: context.py  test_calculate.py  test_cluster.py  test_crossmatch.py  test_isochrone.py  test_plot.py  test_verify.py
tests/model/binaries/: test_moe_distefano_17.py
tests/simulate/: test_simulate.py  test_simulate_binaries.py  test_simulate_gaia.py
tests/test_data/: blanco_1_gaia_dr2_gmag_18_cut.pickle  blanco_1_gaia_dr2_gmag_18_cut_LABELS.pickle  blanco_1_gaia_dr2_gmag_18_cut_cluster_only.pickle  crossmatch_match_all_axes  crossmatch_match_position_only  crossmatch_summary_all_axes  crossmatch_summary_position_only  healpix_12237.csv  mwsc_ii_catalogue  mwsc_ii_perturbed  simulated_population_test_clusters
tests/test_data/gaia/dr3/: ra=45,dec=0,radius=0.5.parquet
tests/test_data/healpix_pixel/: 0000_12233.csv  0000_12235.csv  0000_12236.csv  0000_12237.csv  0000_12238.csv  0000_12239.csv  0000_12257.csv  0000_12260.csv  0000_12261.csv
tests/test_data/simulated_populations/: test_clusters
tests/util/: random.py  test_random.py
tutorials/binary_star_models/: index.html
tutorials/simulate_a_cluster/: index.html
tutorials/tutorials/: index.html
wip/: index.html
